<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Politécnico Móvil</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="time12am">12 am</string>
    <string name="time1pm">1 pm</string>
    <string name="time2pm">2 pm</string>
    <string name="time3pm">3 pm</string>
    <string name="time4pm">4 pm</string>
    <string name="time5pm">5 pm</string>
    <string name="time6pm">6 pm</string>
    <string name="time7pm">7 pm</string>
    <string name="time8pm">8 pm</string>
    <string name="time9pm">9 pm</string>
    <string name="time10pm">10 pm</string>
    <string name="time11pm">11 pm</string>
    <string name="time12pm">12 pm</string>
    <string name="time1am">1 am</string>
    <string name="time2am">2 am</string>
    <string name="time3am">3 am</string>
    <string name="time4am">4 am</string>
    <string name="time5am">5 am</string>
    <string name="time6am">6 am</string>
    <string name="time7am">7 am</string>
    <string name="time8am">8 am</string>
    <string name="time9am">9 am</string>
    <string name="time10am">10 am</string>
    <string name="time11am">11 am</string>
    <string name="updating">Actualizando</string>
    <string name="mon">Lunes</string>
    <string name="tue">Martes</string>
    <string name="wed">Miércoles</string>
    <string name="thu">Jueves</string>
    <string name="fri">Viernes</string>
    <string name="sat">Sábado</string>
    <string name="sun">Domingo</string>
    <string name="clear"></string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>

    <string name="str_date">Fecha Nacimiento</string>
    <string name="str_user">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_remember_password">Recordar Contraseña</string>
    <string name="str_ingresar">Ingresar</string>

    <string name="str_please_wait">Por Favor Espera</string>
    <string name="str_signing_in">Iniciando Sesión</string>

    <string name="str_complete_fields">Por Favor Completa Todos Los Campos</string>
    <string name="str_incorrect_credentials">Credenciales Incorrectas</string>


</resources>