<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_gravity="center">



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/photo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etLoginDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/str_date"
                android:nextFocusForward="@+id/etLoginUser"
                android:singleLine="true"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etLoginUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/str_user"
                android:nextFocusForward="@+id/etLoginPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/str_password"
                android:imeActionLabel="@string/str_ingresar"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/chkRememberPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_remember_password" />


        <Button
            android:id="@+id/btnSignIn"
            style="@style/ButtonRaised"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/str_ingresar"
            android:textColor="@color/md_white_1000" />


    </LinearLayout>
</ScrollView>